@@ -2,6 +2,7 @@
 package edu.colorado.phet.sugarandsaltsolutions;
 
 import java.awt.Color;
+import java.util.Arrays;
 import java.util.Random;
 
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
@@ -33,8 +34,16 @@ public class SugarAndSaltSolutionsApplication extends PiccoloPhetApplication {
         addModule( new MicroModule( globalState ) );
         addModule( new WaterModule( globalState ) );
 
+        //Parse command line args for a directive like "-module 2" which will set that as the startup module (0-based indices)
+        //This is done so that the developer can easily specify a starting tab for the simulation by changing the command line arguments
         if ( config.isDev() ) {
-            setStartModule( moduleAt( 2 ) );
+            int index = Arrays.asList( config.getCommandLineArgs() ).indexOf( "-module" );
+            if ( index >= 0 && index + 1 < config.getCommandLineArgs().length ) {
+                String nextArg = config.getCommandLineArgs()[index + 1];
+                int module = Integer.parseInt( nextArg );
+                System.out.println( getClass().getName() + ": dev mode launching with tab: " + module );
+                setStartModule( moduleAt( module ) );
+            }
         }
 
         //Add developer menus for changing the color of background and salt
